Fix active slide background in dark mode

--- a/styles/tools/_swiper.scss
+++ b/styles/tools/_swiper.scss
@@ -15,7 +15,7 @@
 	}
 
 	.swiper-slide-active {
-		@apply bg-olive;
+		@apply bg-olive dark:bg-olive;
 
 		div {
 			@apply inset-2 #{!important};
